BuildHughes/translation-tool/inputs/source_meta/objects/Hsvc_VideoDataSaveTransactions__c.object
<CustomObject>
    <fields>
        <fullName>Action_Performed_By__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos; +  CreatedBy.LastName</formula>
        <label>Action Performed By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <description>video optimisation Data Saver setting</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Temporary HD</fullName>
                </value>
                <value>
                    <fullName>Permanent HD</fullName>
                </value>
                <value>
                    <fullName>DVD</fullName>
                </value>
                <value>
                    <fullName>Reset Snooze</fullName>
                </value>
                <value>
                    <fullName>Video Data Saver OFF</fullName>
                    <isActive>false</isActive>
                    <label>Video Data Saver OFF</label>
                </value>
                <value>
                    <fullName>Video Data Saver ON</fullName>
                    <isActive>false</isActive>
                    <label>Video Data Saver ON</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date_and_Time__c</fullName>
        <description>Video optimisation Scheduled snooze end time</description>
        <label>Scheduled End Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <formula>LastModifiedBy.FirstName + &apos; &apos; +  LastModifiedBy.LastName</formula>
        <label>Last Modified By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Account__c</fullName>
        <description>An account for which video optimisation case has been raised</description>
        <label>Location Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Hsvc_VideoDataSaverTransactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date_and_Time__c</fullName>
        <inlineHelpText>Video optimisation data saver Snooze start time</inlineHelpText>
        <label>Start Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VideoShapingEnabled__c</fullName>
        <label>VideoShapingEnabled</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VideoShapingSnoozeEnabled__c</fullName>
        <label>VideoShapingSnoozeEnabled</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>Video Data Saver Transactions History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VDS-{0000000000}</displayFormat>
        <label>Hsvc_VideoDataSaverTransaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Video Data Saver Transactions History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>